styles: Fix header alignment and increase main padding

--- a/web250/styles/default.css
+++ b/web250/styles/default.css
@@ -137,6 +137,10 @@ a:hover {
   color: var(--color-link-hover);
 }
 
+p {
+  margin: 10px;
+}
+
 nav {
   display: flex;
   align-items: center;
@@ -156,7 +160,7 @@ main {
   flex-direction: column;
   justify-content: center;
   background-color: #f8f9fa59;
-  padding: 20px 20px 0 20px;
+  padding: 20px 25px 20px 25px;
   box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.219), 0 2px 4px rgba(0, 0, 0, 0.219);
   border-radius: 0 0 5px 5px;
   font-size: 1.2em;
